force-app/main/default/objects/Post_Dated_Cheque__c/Post_Dated_Cheque__c.object-meta.xml
<CustomObject>
    <label>Post Dated Cheque</label>
    <nameField>
        <label>Cheque Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Dated Cheques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>