force-app/main/default/objects/Post_Dated_Cheque__c/fields/Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period__c</fullName>
    <label>Accounting Period</label>
    <length>30</length>
    <type>Text</type>
</CustomField>