force-app/main/default/objects/Post_Dated_Cheque__c/fields/Bank_Account_Deposited_To__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Deposited_To__c</fullName>
    <label>Bank Account Deposited To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>