force-app/main/default/objects/Post_Dated_Cheque__c/fields/Bank_Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transaction_Reference__c</fullName>
    <label>Bank Transaction Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>