force-app/main/default/objects/Post_Dated_Cheque__c/fields/Bounce_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Charges__c</fullName>
    <label>Bounce Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>