force-app/main/default/objects/Post_Dated_Cheque__c/fields/Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Date__c</fullName>
    <label>Bounce Date</label>
    <type>Date</type>
</CustomField>