force-app/main/default/objects/Post_Dated_Cheque__c/fields/Cheque_Category__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Category__c</fullName>
    <label>Cheque Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>Token Money / Booking Fees</fullName>
            </value>
            <value>
                <fullName>Oqood Fees</fullName>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
            </value>
            <value>
                <fullName>Service Charges</fullName>
            </value>
            <value>
                <fullName>Handover Charges</fullName>
            </value>
            <value>
                <fullName>Title Deed Fees</fullName>
            </value>
            <value>
                <fullName>Pre-Title Deed Fees</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>