force-app/main/default/objects/Post_Dated_Cheque__c/fields/Cheque_Title__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Title__c</fullName>
    <label>Cheque Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>