force-app/main/default/objects/Post_Dated_Cheque__c/fields/Cheque_Type__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Type__c</fullName>
    <label>Cheque Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDC</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>