force-app/main/default/objects/Post_Dated_Cheque__c/fields/Clearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Date__c</fullName>
    <label>Clearing Date</label>
    <type>Date</type>
</CustomField>