force-app/main/default/objects/Post_Dated_Cheque__c/fields/Corporate_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Applicable</label>
    <type>Checkbox</type>
</CustomField>