force-app/main/default/objects/Post_Dated_Cheque__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Post Dated Cheques</relationshipLabel>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>