force-app/main/default/objects/Post_Dated_Cheque__c/fields/Deposit_Slip_Number__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Slip_Number__c</fullName>
    <label>Deposit Slip Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>