force-app/main/default/objects/Post_Dated_Cheque__c/fields/Escrow_Account__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account__c</fullName>
    <label>Escrow Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>