force-app/main/default/objects/Post_Dated_Cheque__c/fields/Escrow_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escrow Applicable</label>
    <type>Checkbox</type>
</CustomField>