force-app/main/default/objects/Post_Dated_Cheque__c/fields/Legal_Notice_Issued__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notice_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Notice Issued</label>
    <type>Checkbox</type>
</CustomField>