force-app/main/default/objects/Post_Dated_Cheque__c/fields/PDC_Status__c.field-meta.xml
<CustomField>
    <fullName>PDC_Status__c</fullName>
    <label>PDC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Warehoused</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Unwarehoused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>