force-app/main/default/objects/Post_Dated_Cheque__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Post Dated Cheques</relationshipLabel>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>