force-app/main/default/objects/Post_Dated_Cheque__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Number</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Post Dated Cheques</relationshipLabel>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>