force-app/main/default/objects/Post_Dated_Cheque__c/fields/Recovery_Status__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Status__c</fullName>
    <label>Recovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDC Received</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Re-deposit Scheduled</fullName>
            </value>
            <value>
                <fullName>Recovered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>