force-app/main/default/objects/Post_Dated_Cheque__c/fields/Replacement_PDC_Reference__c.field-meta.xml
<CustomField>
    <fullName>Replacement_PDC_Reference__c</fullName>
    <label>Replacement PDC Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>