force-app/main/default/objects/Post_Dated_Cheque__c/fields/SPA_Sales_Booking__c.field-meta.xml
<CustomField>
    <fullName>SPA_Sales_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPA / Sales Booking #</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Post Dated Cheques</relationshipLabel>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>