force-app/main/default/objects/Post_Dated_Cheque__c/fields/Unit_number__c.field-meta.xml
<CustomField>
    <fullName>Unit_number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit number</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Post Dated Cheques</relationshipLabel>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>