force-app/main/default/objects/Post_Dated_Cheque__c/fields/Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Value_Date__c</fullName>
    <label>Value Date</label>
    <type>Date</type>
</CustomField>