force-app/main/default/objects/Post_Dated_Cheque__c/fields/Warehoused_Date__c.field-meta.xml
<CustomField>
    <fullName>Warehoused_Date__c</fullName>
    <label>Warehoused Date</label>
    <type>Date</type>
</CustomField>